Enhancement: Update JWT keys + Management API config

--- a/templates/compose/daemons.yaml.erb
+++ b/templates/compose/daemons.yaml.erb
@@ -54,6 +54,7 @@ services:
     env_file:
       - ../config/rango.env
       - ../config/kaigara.env
+    command: kaigara ./rango
 
   mailer:
     restart: always
