--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -178,8 +178,8 @@ secrets:
     scopes:
       public: {}
       private:
-        peatio_url: http://peatio:8080
-        barong_url: http://barong:8080
+        peatio_url: http://peatio:8080/api/v2/management
+        barong_url: http://barong:8080/api/v2/management
         database_name: sonic
         jwt_issuer: sonic
         jwt_algo: RS256
@@ -215,6 +215,9 @@ secrets:
         management_api_v1_config: /opt/peatio/config/management_api_v1.yml
         jwt_audience: peatio,barong
         jwt_public_key: <%= @barong_public_key %>
+        openfinex_cloud_public_key: "LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUZrd0V3WUhLb1pJemowQ0FRWUlLb1pJemowREFRY0RRZ0FFWjh3cXQrNWwzRm
+hYVEVhS0pZdHhNL2taWVdkWQpLbnpIZzM1ZWZGcjVsWTlZcUl0ZE8vd0daOXJhWGRReHdrekh5ZUI0MnNOK2lTalhqTkxlNlhPMXB3PT0KLS0tLS1FTkQgUFVCTElDIEtFWS0tLS
+0tCg=="
         influxdb_host: influxdb
         event_api_jwt_algorithm: RS256
         event_api_rabbitmq_port: '5672'
@@ -223,7 +226,7 @@ secrets:
         minimum_member_level_for_trading: '2'
         force_secure_connection: 'false'
       secret:
-        jwt_private_key: <%= @peatio_private_key %>
+        peatio_jwt_private_key: <%= @peatio_private_key %>
         event_api_rabbitmq_username: guest
         event_api_rabbitmq_password: guest
         secret_key_base: faiba2shei0Ae5gahCh4aipoh3meyaFi
