--- a/templates/config/sonic.env.erb
+++ b/templates/config/sonic.env.erb
@@ -1,5 +1,3 @@
 KAIGARA_APP_NAME=sonic
 KAIGARA_SCOPES=public,private,secret
-BARONG_PUBLIC_KEY=<%= @barong_public_key %>
-PEATIO_PUBLIC_KEY=<%= @peatio_public_key %>
-SONIC_PUBLIC_KEY=<%= @sonic_public_key %>
+OPENDAX_ADDR=https://uat.opendax.app
