Enhancement: Update OpenDAX address and public key

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -185,7 +185,7 @@ secrets:
         jwt_algo: RS256
         vault_addr: http://vault:8200
         deployment_id: <%= @config['app']['name'].downcase %>
-        opendax_addr: https://uat.opendax.app
+        opendax_addr: <%= @config['app']['opendax_addr'] %>
       secret:
         jwt_private_key: <%= @sonic_private_key %>
         sonic_public_key: <%= @sonic_public_key %>
@@ -215,9 +215,7 @@ secrets:
         management_api_v1_config: /opt/peatio/config/management_api_v1.yml
         jwt_audience: peatio,barong
         jwt_public_key: <%= @barong_public_key %>
-        openfinex_cloud_public_key: "LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUZrd0V3WUhLb1pJemowQ0FRWUlLb1pJemowREFRY0RRZ0FFWjh3cXQrNWwzRm
-hYVEVhS0pZdHhNL2taWVdkWQpLbnpIZzM1ZWZGcjVsWTlZcUl0ZE8vd0daOXJhWGRReHdrekh5ZUI0MnNOK2lTalhqTkxlNlhPMXB3PT0KLS0tLS1FTkQgUFVCTElDIEtFWS0tLS
-0tCg=="
+        openfinex_cloud_public_key: "LS0tLS1CRUdJTiBQVUJMSUMgS0VZLS0tLS0KTUZrd0V3WUhLb1pJemowQ0FRWUlLb1pJemowREFRY0RRZ0FFQUpCZXhhWlFwd2o0bXJRRDQyZG9laWtSNUwyVgo3dmRYNUdPY1p0Y1o5OWo1bktOa3EydXJXZTNPVm1hWndEQ3FYcmxoZ0YwY3hHU0lKbUhuUHg4SGlnPT0KLS0tLS1FTkQgUFVCTElDIEtFWS0tLS0tCg=="
         influxdb_host: influxdb
         event_api_jwt_algorithm: RS256
         event_api_rabbitmq_port: '5672'
