Enhancement: Update component tags; remove KAIGARA_URL
* Fix: Peatio Event API configs

--- a/templates/config/mailer.yml.erb
+++ b/templates/config/mailer.yml.erb
@@ -4,7 +4,7 @@ keychain:
     value: "<%= @barong_public_key %>"
   peatio:
     algorithm: RS256
-    value: "<%= @barong_public_key %>"
+    value: "<%= @peatio_public_key %>"
 
 exchanges:
   barong_system:
