--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -210,6 +210,7 @@ secrets:
         database_name: peatio_production
         redis_url: redis://redis:6379
         rabbitmq_host: rabbitmq
+        event_api_rabbitmq_host: rabbitmq
         markets_config: /opt/peatio/config/seed/markets.yml
         currencies_config: /opt/peatio/config/seed/currencies.yml
         management_api_v1_config: /opt/peatio/config/management_api_v1.yml
@@ -225,6 +226,7 @@ secrets:
         force_secure_connection: 'false'
       secret:
         peatio_jwt_private_key: <%= @peatio_private_key %>
+        event_api_jwt_private_key: <%= @peatio_private_key %>
         event_api_rabbitmq_username: guest
         event_api_rabbitmq_password: guest
         secret_key_base: faiba2shei0Ae5gahCh4aipoh3meyaFi
