Enhancement: Add currencies scopes to peatio management API

--- a/templates/config/peatio/management_api_v1.yml.erb
+++ b/templates/config/peatio/management_api_v1.yml.erb
@@ -24,6 +24,16 @@ scopes:
       - sonic
     permitted_signers:
       - sonic
+  read_currencies:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
+  write_currencies:
+    mandatory_signers:
+      - sonic
+    permitted_signers:
+      - sonic
   read_operations:
     mandatory_signers:
       - sonic
