Fix abilities for admin role

--- a/templates/config/peatio/abilities.yml.erb
+++ b/templates/config/peatio/abilities.yml.erb
@@ -49,15 +49,10 @@ admin_permissions:
       - Operations::Expense
       - Operations::Liability
       - Operations::Revenue
-      - Member
-      - Account
       - Beneficiary
-      - PaymentAddress
       - Deposit
       - Withdraw
       - WithdrawLimit
-      - Blockchain
-      - Currency
       - Engine
       - Market
       - TradingFee
@@ -68,10 +63,25 @@ admin_permissions:
     read:
       - Trade
       - Order
+      - Account
+      - PaymentAddress
+      - Member
+      - Currency
+      - Blockchain
     create:
       - Deposits::Fiat
     update:
       - Order
+      - Member
+      - Currency:
+        - name
+        - symbol
+        - position
+        - icon_url
+      - Blockchain:
+        - name
+        - explorer_address
+        - explorer_transaction
   technical:
     read:
       - Operations::Account
