Enhancement: Increase default upload size limit to 20 MB

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -143,6 +143,8 @@ secrets:
         barong_password_use_dictionary: 'false'
         barong_csrf_protection: '<%= @config['csrfEnabled'] %>'
         jwt_public_key: <%= @barong_public_key %>
+        barong_upload_size_min_range: "1"
+        barong_upload_size_max_range: "20"
       secret:
         jwt_private_key_path: /secrets/barong.key
         barong_vault_app_name: <%= @config['app']['name'].downcase %>
