--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -2,6 +2,9 @@ secrets:
   global:
     scopes:
       public:
+      <%- unless @config['app']['wizard_enabled'] %>
+        wizard_step: 'false'
+      <%- end %>
         minutesUntilAutoLogout: '35'
         withCredentials: 'true'
         finex: 'true'
