Feature: Integrate electrumd for BTC + LTC
* Switch Parity to OpenEthereum 3.2.4

--- a/templates/compose/cryptonodes.yaml.erb
+++ b/templates/compose/cryptonodes.yaml.erb
@@ -2,13 +2,12 @@ version: '3.6'
 
 services:
   parity:
-    image: parity/parity:v2.7.2-stable
+    image: openethereum/openethereum:v3.2.4
     restart: always
     command: |
-      --chain=kovan
+      --chain=<%= @config['parity']['network'] %>
       --mode=active
       --interface=all
-      --warp=true
       --snapshot-peers=10
       --min-peers=5
       --max-peers=10
@@ -17,11 +16,34 @@ services:
       --jsonrpc-hosts=all
       --jsonrpc-apis=all
       --db-compaction=ssd
-      --no-persistent-txqueue
     volumes:
-      - ../data/parity:/home/parity/.local/share/io.parity.ethereum
+      - ../data/parity:/home/openethereum/.local/share/io.parity.ethereum
     ports:
       - "127.0.0.1:8545:8545"
+
+  electrumd-btc:
+    image: quay.io/openware/electrum:3.3.8-1
+    restart: always
+    env_file:
+      - ../config/kaigara.env
+      - ../config/electrumd-btc.env
+    volumes:
+      - ../data/electrumd-btc:/data
+    command:
+      - kaigara
+      - start-electrum.py
+
+  electrumd-ltc:
+    image: quay.io/openware/electrum-ltc:3.3.8.1
+    restart: always
+    env_file:
+      - ../config/kaigara.env
+      - ../config/electrumd-ltc.env
+    volumes:
+      - ../data/electrumd-ltc:/data
+    command:
+      - kaigara
+      - start-electrum.py
 
   bitcoind:
     image: quay.io/openware/bitcoind:0.19.1
