--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -275,3 +275,23 @@ secrets:
         log_level: info
         rabbitmq_host: rabbitmq
         jwt_public_key: <%= @barong_public_key %>
+
+  electrumd_btc:
+    scopes:
+      private:
+        testnet: "<%= @config['electrumd_btc']['testnet'] %>"
+        segwit: "<%= @config['electrumd_btc']['segwit'] %>"
+      secret:
+        electrum_user: "<%= @config['electrumd_btc']['user'] %>"
+        electrum_password: "<%= @config['electrumd_btc']['password'] %>"
+        wallet_passphrase: "<%= @config['electrumd_btc']['wallet_passphrase'] %>"
+
+  electrumd_ltc:
+    scopes:
+      private:
+        testnet: "<%= @config['electrumd_ltc']['testnet'] %>"
+        segwit: "<%= @config['electrumd_ltc']['segwit'] %>"
+      secret:
+        electrum_user: "<%= @config['electrumd_ltc']['user'] %>"
+        electrum_password: "<%= @config['electrumd_ltc']['password'] %>"
+        wallet_passphrase: "<%= @config['electrumd_ltc']['wallet_passphrase'] %>"
