Fix: barong envs scope fix, set usernameEnabled to true

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -20,7 +20,7 @@ secrets:
         captcha_type: <%= @config['captcha']['type'] %>
         captcha_id: ''
         captchaLogin: 'false'
-        usernameEnabled: 'false'
+        usernameEnabled: 'true'
         password_min_enthropy: '14'
         passwordEntropyStep: '14'
         showLanding: 'true'
@@ -147,6 +147,9 @@ secrets:
         barong_captcha: <%= @config['captcha']['type'] %>
         barong_password_min_entropy: '14'
         barong_password_use_dictionary: 'false'
+        <%- if @config['twilio']['enabled'] -%>
+        barong_phone_verification: twilio_sms
+        <%- end -%>
         barong_csrf_protection: '<%= @config['csrfEnabled'] %>'
         jwt_public_key: <%= @barong_public_key %>
         barong_upload_size_min_range: "1"
@@ -167,7 +170,6 @@ secrets:
         barong_twilio_account_sid: <%= @config['twilio']['account_sid'] %>
         barong_twilio_auth_token: <%= @config['twilio']['auth_token'] %>
         barong_twilio_phone_number: <%= @config['twilio']['phone_number'] %>
-        barong_phone_verification: twilio_sms
         <%- end -%>
         <%- if @config['captcha']['type'] == 'recaptcha' -%>
         barong_recaptcha_site_key: <%= @config['captcha']['siteKey'] %>
