Add require_doc in document labelSwitcher

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -38,7 +38,7 @@ secrets:
             { name: 'email', label: [{ email: 'verified' }] },
             { name: 'phone', label: [{ phone: 'verified' }] },
             { name: 'profile', label: [{ profile: 'verified' }] },
-            { name: 'document', label: [{ document: 'verified' }] },
+            { name: 'document', label: [{ document: 'verified' }], require_doc: 'true' },
         ]
         plugins: []
         roleTypes: [
