Fix: add Address label switcher

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -39,6 +39,7 @@ secrets:
             { name: 'phone', label: [{ phone: 'verified' }] },
             { name: 'profile', label: [{ profile: 'verified' }] },
             { name: 'document', label: [{ document: 'verified' }], require_doc: 'true' },
+            { name: 'address', label: [{ address: 'verified' }], require_doc: 'true' },
         ]
         plugins: []
         roleTypes: [
