--- a/templates/compose/app.yaml.erb
+++ b/templates/compose/app.yaml.erb
@@ -73,7 +73,7 @@ services:
       - ../config/kaigara.env
     entrypoint: /bin/sh -c "kaigara ./bin/sonic serve"
     labels:
-      - "traefik.http.routers.sonic-<%= @name %>.rule=PathPrefix(`/`)"
+      - "traefik.http.routers.sonic-<%= @name %>.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/`)"
       - "traefik.enable=true"
       - "traefik.http.services.sonic-<%= @name %>.loadbalancer.server.port=6969"
       <%- if @config['ssl']['enabled'] -%>
@@ -88,7 +88,7 @@ services:
     restart: always
     image: "<%= @config['images']['tower'] %>"
     labels:
-      - "traefik.http.routers.tower-<%= @name %>.rule=PathPrefix(`/tower`)"
+      - "traefik.http.routers.tower-<%= @name %>.rule=Host(`<%= @config['app']['subdomain'] %>.<%= @config['app']['domain'] %>`) && PathPrefix(`/tower`)"
       - "traefik.enable=true"
       - "traefik.http.services.tower-<%= @name %>.loadbalancer.server.port=8080"
       <%- if @config['ssl']['enabled'] -%>
