Feature: add barong envs for upload size range

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -25,6 +25,8 @@ secrets:
         passwordEntropyStep: '14'
         showLanding: 'true'
         sentryEnabled: 'false'
+        uploadMaxSize: <%= @config['storage']['uploadMaxSize'] %>
+        uploadMinSize: <%= @config['storage']['uploadMinSize'] %>
         kycSteps: [
           'email',
           'phone',
@@ -123,6 +125,8 @@ secrets:
         barong_default_language: en
         barong_kyc_provider: <%= @config['kyc']['provider'] %>
         barong_app_name: <%= @config['app']['name'] %>
+        barong_upload_size_min_range: <%= @config['storage']['uploadMinSize'] %>
+        barong_upload_size_max_range: <%= @config['storage']['uploadMaxSize'] %>
         barong_uid_prefix: ID
         barong_sms_content_template: "Your verification code for OpenDAX: {{code}}"
         barong_required_docs_expire: 'false'
