Feature: Add barong envs for upload size range (#326)
* Delete duplicated parameters (#327)
* Update start.sh and secrets.yaml

--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -25,6 +25,8 @@ secrets:
         passwordEntropyStep: '14'
         showLanding: 'true'
         sentryEnabled: 'false'
+        uploadMaxSize: <%= @config['storage']['uploadMaxSize'] %>
+        uploadMinSize: <%= @config['storage']['uploadMinSize'] %>
         kycSteps: [
           'email',
           'phone',
@@ -123,6 +125,8 @@ secrets:
         barong_default_language: en
         barong_kyc_provider: <%= @config['kyc']['provider'] %>
         barong_app_name: <%= @config['app']['name'] %>
+        barong_upload_size_min_range: <%= @config['storage']['uploadMinSize'] %>
+        barong_upload_size_max_range: <%= @config['storage']['uploadMaxSize'] %>
         barong_uid_prefix: ID
         barong_sms_content_template: "Your verification code for OpenDAX: {{code}}"
         barong_required_docs_expire: 'false'
@@ -150,8 +154,6 @@ secrets:
         barong_password_use_dictionary: 'false'
         barong_csrf_protection: '<%= @config['csrfEnabled'] %>'
         jwt_public_key: <%= @barong_public_key %>
-        barong_upload_size_min_range: "1"
-        barong_upload_size_max_range: "20"
       secret:
         jwt_private_key_path: /secrets/barong.key
         barong_vault_app_name: <%= @config['app']['name'].downcase %>
