--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -125,6 +125,7 @@ secrets:
         barong_default_language: en
         barong_kyc_provider: <%= @config['kyc']['provider'] %>
         barong_app_name: <%= @config['app']['name'] %>
+        barong_rack_attack_limit: '5'
         barong_upload_size_min_range: <%= @config['storage']['uploadMinSize'] %>
         barong_upload_size_max_range: <%= @config['storage']['uploadMaxSize'] %>
         barong_uid_prefix: ID
