Feature: add new 'reporter' role

--- a/templates/config/barong/abilities.yml.erb
+++ b/templates/config/barong/abilities.yml.erb
@@ -5,6 +5,7 @@ roles:
   - accountant
   - compliance
   - support
+  - reporter
 
 admin_permissions:
   superadmin:
@@ -68,3 +69,11 @@ admin_permissions:
       - Activity
     manage:
       - User
+  reporter:
+    read:
+      - Ability
+      - User
+      - Level
+      - Label
+      - Profile
+      - Activity
