--- a/templates/config/finex/config.yaml.erb
+++ b/templates/config/finex/config.yaml.erb
@@ -65,7 +65,7 @@ api:
   actions:
     trade:
       min_level: 2
-      roles: [member, broker, trader, maker, admin, superadmin]
+      roles: [member, broker, trader, maker, admin, superadmin, reporter]
     bulk_api:
       min_level: 3
       roles: [maker, admin, superadmin]
