--- a/templates/config/secrets.yaml.erb
+++ b/templates/config/secrets.yaml.erb
@@ -81,6 +81,10 @@ secrets:
                 value: 'Broker',
                 key: 'broker',
             },
+            {
+                value: 'Reporter',
+                key: 'reporter',
+            },
         ]
         allowedRoles: [
           'admin',
@@ -90,6 +94,7 @@ secrets:
           'support',
           'technical',
           'manager',
+          'reporter',
         ]
         devMode: 'true'
         minutesBeforeWarningMessage: '1'
