Feature: Add seed for platform currency

--- a/templates/config/peatio/seed/currencies.yml.erb
+++ b/templates/config/peatio/seed/currencies.yml.erb
@@ -1,1 +1,6 @@
-[]
+- id:                     usdt
+  name:                   Tether
+  type:                   coin
+  status:                 enabled
+  precision:              8
+  position:               1
