--- a/templates/config/peatio/seed/blockchains.yml.erb
+++ b/templates/config/peatio/seed/blockchains.yml.erb
@@ -3,6 +3,7 @@
   client:            parity
   server:            http://<%= @config['parity']['address'] %>:<%= @config['parity']['rpcport'] %>
   height:            8670000
+  protocol:          ERC-20
   min_confirmations: 6
   explorer:
     address:         https://etherscan.io/address/#{address}
@@ -15,6 +16,7 @@
   server:            http://<%= @config['parity']['address'] %>:<%= @config['parity']['rpcport'] %>
   height:            8670000
   min_confirmations: 6
+  protocol:          Opendax
   explorer:
     address:         https://etherscan.io/address/#{address}
     transaction:     https://etherscan.io/tx/#{txid}
@@ -27,6 +29,7 @@
   server:            http://<%= @config['bitcoind']['rpcuser'] %>:<%= @config['bitcoind']['rpcpassword'] %>@<%= @config['bitcoind']['address'] %>:<%= @config['bitcoind']['rpcport'] %>
   height:            597000
   min_confirmations: 6
+  protocol:          Bitcoin
   explorer:
     address:         https://blockchain.info/address/#{address}
     transaction:     https://blockchain.info/tx/#{txid}
